--- a/env.example
+++ b/env.example
@@ -1,7 +1,8 @@
 # Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=8375332170:AAGfFHJBphJA-wsSf9azpkoFSPos7hqXZ28
+TELEGRAM_BOT_TOKEN=//
 
 # EVVM Configuration
+EVVM_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000  # Replace with actual contract address
 EVVM_RPC_URL=https://mainnet.infura.io/v3/your_infura_key
 ARBITRUM_RPC_URL=https://arbitrum-mainnet.infura.io/v3/your_infura_key
 
