--- a/package.json
+++ b/package.json
@@ -21,21 +21,22 @@
   "author": "EVVM Team",
   "license": "MIT",
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0",
-    "ethers": "^6.8.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "@evvm/viem-signature-library": "^1.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "winston": "^3.11.0",
-    "joi": "^17.11.0",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.8.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "keccak": "^3.0.4",
     "mersenne-twister": "^1.1.0",
-    "keccak": "^3.0.4"
+    "node-telegram-bot-api": "^0.66.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
